--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Zuri Team has been immensely sucessful in  creating global network of a highly adapt intelligent workforce that can <br>
         help your company achieve their mission-critical <i> projects and goals</i></p>
         <div class="container1">
-            <button> <a href="#">I'm new to the industry</a></button> <button> <a href="#">I need industry experience</a></button>
+            <button> <a href="#">I'm new to the industry</a></button> <button> <a href="page2.html">I need industry experience</a></button>
             
         </div>
     </div>
