--- a/page2.html
+++ b/page2.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <nav>
-    <img src="" alt="">
-    <div class="container8"><img src="Screenshot_11.png" alt="zuri">
-        <img src="Screenshot_12.png" alt="zuri"><button><a href="#">Enroll Now</a></button>
+    <!-- <img src="" alt=""> -->
+    <div class="container8"><img  class="nav" src="Screenshot_11.png" alt="zuri"><img class="nav1" id="top-image" src="Screenshot_12.png" alt="zuri"><br><button class="nav1" id="top-btn"><a href="#">Enroll Now</a></button>
     </div>
 </nav>
 
@@ -139,7 +139,42 @@
         <br><br>
         <h4 class="header2">Got Questions?</h4><br>
         <h3 id="fq"><b>Frequently Asked Questions</b></h3>
+        <div class="containerfq">
+        <div><input class="input" type="button" placeholder="Would i have to pay to enroll for the training?"> <label></label></div>
+        <div><input class="input" type="button" placeholder="What are the things i would need to participate?"> <label></label></div>
+        <div><input class="input" type="button" placeholder="What happens if i join and i'm not active ?"> <label></label></div>
+        <div><input class="input" type="button" placeholder="Can i switched from the part-time track to full-time and vice versa?"> <label></label></div>
+        <div><input class="input" type="button" placeholder="Will i get paid?"> <label></label></div>
+        </div>
       </div>
+      <h4>Still got questions?</h4>
+      <button><a href=""><img src="" alt=""></a>Tweet them at us</button>
+      <div class="containerL">
+        <br><br>
+        <h3>Structure</h3><br><h2>Program Structure</h2><br><p>There are 2 broad paths in this program base on your availability.</p><br><br>
+  <div class="black">
+    <h2 id="white">Full-time</h2><br><br>
+    <p>Require at least 25 hours <br>weekily on the program content.<br></p><h3>available Tracks:</h3><br><ul>
+        <li>Full Stack: Backend <br><p>(python, Javascript),<br> Frontend  (HTML, CSS , javascript)& DevOps</p></li>
+        <li>Design: Figma, Adobe XD </li>
+        <h3>Phases:</h3>
+        <li>Traing phase </li>
+        <li>Project phase</li>
+        <h3>Post Program</h3>
+        <li>Certification of <br>Attendance</li>
+        <li>Zuri Internship</li>
+        <li>Laptop Reward (upgrade or new one)</li>
+        <li>Job Placement</li>
+        <li>Zuri Talent Pool</li>
+        <li>More Training</li>
+        <p>interview Prep<br>Algorithms & Data <br> Structure<br>Freelance setup and Training<br>Linkedin Optimazation
+        <br> CV Review</p>
+    </ul>
+  </div>
+  <div class="black"></div>
+  <div class="red"></div>
+     
+    </div>
 </body>
 
 </html>
